Second labwork markdown report is done

--- a/labs/lab02/report/Л02_Авилов_отчёт.md
+++ b/labs/lab02/report/Л02_Авилов_отчёт.md
@@ -16,44 +16,44 @@
 
 1. Выполняем базовую настройку git: указываем имя, фамилию и почту владельца репозитория, настраиваем некоторые параметры.
 
-![](001.png)
+![](image/001.png)
 
 2. Создаём SSH ключ и указываем его на сайте github.
 
-![](002.png)
+![](image/002.png)
 
-![](003.jpeg)
+![](image/003.jpeg)
 
 3. Создаём репозиторий курса на основе шаблона и клонируем на рабочий ПК.
 
-![](004.jpeg)
+![](image/004.jpeg)
 
-![](005.png)
+![](image/005.png)
 
 4. Выполняем настройку каталога курса.
 
-![](006.png)
+![](image/006.png)
 
-![](007.png)
+![](image/007.png)
 
 5. Проверяем правильность создания иерархии рабочего пространства.
 
-![](008.png)
+![](image/008.png)
 
-![](009.png)
+![](image/009.png)
 
-![](010.jpeg)
+![](image/010.jpeg)
 
 Всё выполнено правильно
 
 **Задания для самостоятельной работы:**
 
-1. Создаём отчёт по выполнению данной лабораторной работы в соответствующем каталоге.![](011.jpeg)
+1. Создаём отчёт по выполнению данной лабораторной работы в соответствующем каталоге.![](image/011.jpeg)
 1. Копируем отчёт по выполнению предыдущей лабораторной работы в соответствующий каталог.
 
-![](012.png)
+![](image/012.png)
 
-3. Загружаем файлы на github.![](013.png)![](014.png)
+3. Загружаем файлы на github.![](image/013.png)![](image/014.png)
 
 **Вывод:**  
 
